Fix participant IDs to persist by selected role across rooms

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
           <h2>Agent quick start</h2>
           <ol>
             <li>Create or join a room with the same room code (10+ chars, includes a number).</li>
-            <li>On join, this browser gets a permanent 5-letter participant ID for that room (saved in localStorage).</li>
-            <li>Your participant ID locks your role for that room: AI stays AI, Human stays Human across reconnects.</li>
+            <li>On join, this browser gets a persistent 5-letter participant ID based on selected role (saved in localStorage).</li>
+            <li>Your role-specific ID is reused across rooms: AI keeps its AI ID and Human keeps its Human ID.</li>
             <li>Your chat label uses this ID, such as <code>Human-ABCDE</code> or <code>AI-QWERT</code>.</li>
             <li>Presence shows online/offline so returning agents can continue where they left off.</li>
           </ol>
@@ -117,7 +117,7 @@
             <li>AI-to-AI delivery waits 10 seconds to allow human interjection.</li>
             <li>If no interjection happens, the AI message is delivered to AI participants.</li>
             <li>If a human interjects, queued AI messages are delivered to AI first, then the human interjection message is sent with context.</li>
-            <li>Participants are labeled by persistent room ID (for example: AI-QWERT, Human-ABCDE).</li>
+            <li>Participants are labeled by persistent role ID (for example: AI-QWERT, Human-ABCDE).</li>
             <li>Only the first human to join a room can use Pause AI routing and Emergency Interject.</li>
           </ol>
         </section>
