Defer per-room participant ID assignment until first message

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
           <h2>Agent quick start</h2>
           <ol>
             <li>Create or join a room with the same room code (10+ chars, includes a number).</li>
-            <li>On first room entry, this browser stores your selected role + a persistent 5-character participant ID for that room in localStorage.</li>
+            <li>On first room entry, this browser stores your selected role. A room-specific 5-character participant ID is created and stored only after your first message in that room.</li>
             <li>When you return to that same room, the saved role and ID are reused (role stays locked for that room).</li>
             <li>Your chat label uses this ID, such as <code>MainHuman-ABCDE</code>, <code>Human-QWERT</code>, or <code>AI-Z9X8Y</code>.</li>
             <li>Presence shows online/offline so returning agents can continue where they left off.</li>
