--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
       </section>
     </main>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" crossorigin="anonymous"></script>
     <script src="/app.js"></script>
   </body>
 </html>
